--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,8 +15,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/varela_round"
@@ -32,12 +31,11 @@
             android:background="@null"
             android:scaleX="1.5"
             android:scaleY="1.5"
-            android:tint="@color/darkTone"
-            app:srcCompat="@drawable/ic_more_vert_black_24dp" />
+            app:srcCompat="@drawable/ic_more_vert_black_24dp"
+            app:tint="@color/darkTone" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -107,11 +105,10 @@
                         android:id="@+id/mainNutrients"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:tint="@color/lightTone"
-                        app:srcCompat="@drawable/rounded_rect" />
+                        app:srcCompat="@drawable/rounded_rect"
+                        app:tint="@color/lightTone" />
 
                     <TextView
-                        android:id="@+id/textView12"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -132,11 +129,10 @@
                         android:id="@+id/mainHistory"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:tint="@color/lightTone"
-                        app:srcCompat="@drawable/rounded_rect" />
+                        app:srcCompat="@drawable/rounded_rect"
+                        app:tint="@color/lightTone" />
 
                     <TextView
-                        android:id="@+id/textView13"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -156,11 +152,10 @@
                         android:id="@+id/mainProfile"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:tint="@color/lightTone"
-                        app:srcCompat="@drawable/rounded_rect" />
+                        app:srcCompat="@drawable/rounded_rect"
+                        app:tint="@color/lightTone" />
 
                     <TextView
-                        android:id="@+id/textView14"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -180,11 +175,10 @@
                         android:id="@+id/mainDBViewer"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:tint="@color/lightTone"
-                        app:srcCompat="@drawable/rounded_rect" />
+                        app:srcCompat="@drawable/rounded_rect"
+                        app:tint="@color/lightTone" />
 
                     <TextView
-                        android:id="@+id/textView15"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
