--- a/app/src/main/res/layout/fragment_plan.xml
+++ b/app/src/main/res/layout/fragment_plan.xml
@@ -29,8 +29,8 @@
             android:background="@null"
             android:scaleX="2"
             android:scaleY="2"
-            android:tint="@color/darkTone"
-            app:srcCompat="@drawable/ic_chevron_left_black_24dp" />
+            app:srcCompat="@drawable/ic_chevron_left_black_24dp"
+            app:tint="@color/darkTone" />
 
         <View
             android:layout_width="0dp"
