--- a/app/src/main/res/layout/plan_lg.xml
+++ b/app/src/main/res/layout/plan_lg.xml
@@ -33,10 +33,10 @@
 
         android:scaleX="1.5"
         android:scaleY="1.5"
-        android:tint="@color/standardTone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_expand_more_black_24dp" />
+        app:srcCompat="@drawable/ic_expand_more_black_24dp"
+        app:tint="@color/standardTone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
