--- a/app/src/main/res/layout/plan_li.xml
+++ b/app/src/main/res/layout/plan_li.xml
@@ -3,23 +3,36 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/planListItemName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/varela_round"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/planListItemAmount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
         android:layout_marginLeft="20dp"
-        android:layout_weight="1"
-        android:fontFamily="@font/varela_round"
-        android:textSize="16sp" />
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/planListItemAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:fontFamily="@font/varela_round"
+            android:text="100mg"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/planListItemName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@id/planListItemAmount"
+            android:ellipsize="end"
+            android:fontFamily="@font/varela_round"
+            android:maxLines="1"
+            android:text="Platzhalter"
+            android:textSize="18sp" />
+
+    </RelativeLayout>
 
 </LinearLayout>
