--- a/app/src/main/res/layout/weekpicker_bottom_sheet.xml
+++ b/app/src/main/res/layout/weekpicker_bottom_sheet.xml
@@ -57,10 +57,11 @@
 
     <Button
         android:id="@+id/weekConfirm"
-        style="@style/Widget.AppCompat.Button.Colored"
+        style="?attr/materialButtonStyle"
+        android:backgroundTint="@color/standardTone"
+        android:textColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/standardTone"
         android:layout_marginTop="20dp"
         android:text="OK" />
 
