--- a/app/src/main/res/layout/fragment_dbviewer.xml
+++ b/app/src/main/res/layout/fragment_dbviewer.xml
@@ -21,13 +21,11 @@
 
         <ImageButton
             android:id="@+id/dbBack"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@null"
-            android:scaleX="2"
-            android:scaleY="2"
-            app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />
-
+            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
+            app:tint="@color/darkTone" />
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -61,29 +59,37 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="25dp"
+
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:text="Zeige dir Einträge der Datenbank an oder füge eigene hinzu."
         android:textAlignment="center"
         android:textColor="@color/standardTone" />
 
-    <EditText
-        android:id="@+id/dbSearch"
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        android:backgroundTint="@color/standardTone"
-        android:ems="10"
-        android:hint="Name"
-        android:inputType="textPersonName" />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:hint="Name">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dbSearch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/dbFoodList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp" />
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"/>
 
 </LinearLayout>
